# treehouse

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build-linux.sh  build-macos.sh  build-windows.sh  build.sh  clippy.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  treehouse.code-workspace
app/: Cargo.toml  build.rs
app/src/: app.rs  main.rs
app/src/app/: config.rs  consts.rs  menu.rs  ops.rs  platform.rs  win.rs  window.rs
app/src/app/menu/: actions.rs  app_menu_bar.rs  app_menu_item_id.rs  events.rs  impl_custom.rs  impl_muda.rs  implementation.rs  linux.rs  menu_bar_spec.rs  menu_custom.rs  menu_item_ids.rs  menu_model.rs  menu_muda.rs  muda.rs  muda_events.rs  muda_menu.rs
app/src/app/menu/impl_custom/: context_menu.rs
app/src/app/menu/impl_muda/: context_menu.rs  events.rs
app/src/app/menu/implementation/: custom.rs  muda.rs
app/src/app/menu/implementation/custom/: context_menu.rs  menu_bar.rs  ui.rs
app/src/app/menu/implementation/muda/: context_menu.rs  events.rs
app/src/app/menu/muda/: events.rs
app/src/app/platform/: macos.rs  windows.rs
app/src/app/platform/macos/: events.rs  nsappdel.rs
app/src/app/platform/windows/: file_types.rs
examples/: newick.rs  text_width.rs
resources/data/: gts.csv  gts.json
resources/icons/: treehouse.icns
resources/macos/: Info.plist  info_plist_tail.txt  newick.icns  nexus.icns
riced/: Cargo.toml  build.rs
riced/src/: colors.rs  consts.rs  elements.rs  fonts.rs  icons.rs  lib.rs  path_utils.rs  style.rs  table.rs  template_widget.rs  text_width.rs  widget.rs
riced/src/style/: table.rs
riced/src/widget/: common.rs  menu.rs  quad.rs
riced/src/widget/menu/: common.rs  flex.rs  helpers.rs  menu_bar.rs  menu_bar_overlay.rs  menu_bar_style.rs  menu_tree.rs
src/: app.rs  application.rs  colors.rs  lib.rs  main.rs  text_width.rs  tree.rs  treeview.rs  utils.rs  widgets.rs
src/app/: application.rs  macos.rs  menus.rs  treeview.rs  windows.rs
src/app/menus/: events.rs  macos_windows.rs
src/app/menus/linux/: events.rs
src/app/menus/macos/: menus.rs
src/app/menus/macos_windows/: events.rs  menus.rs
src/app/treeview/: ltt_canvas.rs  model.rs  model_impl.rs  treeview_canvas.rs  update.rs  view.rs
src/app/treeview/treeview_canvas/: draw.rs  drawables.rs  program.rs  state.rs
src/app/windows/: play_window.rs  tree_window.rs
src/application/: app.rs  colors.rs  elements.rs  macos.rs  menus.rs  mod.rs  treeview.rs  windows.rs
src/application/elements/: canvas.rs  treeview.rs  treeview1.rs  treeview2.rs  widget_template.rs
src/application/elements/treeview/: draw.rs  program.rs  view.rs
src/application/elements/treeview1/: program.rs  state.rs  view.rs
src/application/elements/treeview2/: program.rs
src/application/menus/: events.rs  linux.rs  mod.rs
src/application/menus/linux/: events.rs
src/application/menus/macos/: events.rs  menus.rs
src/application/treeview/: canvas.rs  draw.rs  drawables.rs  program.rs  state.rs  view.rs
src/application/widgets/: canvas.rs  mod.rs
src/application/widgets/phylo/: canvas.rs  mod.rs  program.rs
src/application/windows/: main.rs  mod.rs  tree_window.rs  win1.rs  win2.rs
src/tree/: flatten.rs  newick.rs  node.rs  utils.rs
src/treeview/: state.rs  view.rs
src/widgets/: canvas.rs
tests/data/: 100_starting_trees.newick  beast01.nex  iqtree_branch_annotations.newick  tree01.newick  tree01.newick.csv  tree02.newick
tests/data/Czech_Huerta-Cepas_Stamatakis_2017/: Czech_Huerta-Cepas_Stamatakis_2017.txt  Czech_Huerta-Cepas_Stamatakis_2017_unrooted.newick  Czech_Huerta-Cepas_Stamatakis_2017_unrooted__node_and_branch_attributes.newick  Czech_Huerta-Cepas_Stamatakis_2017_unrooted__node_attributes.newick  Czech_Huerta-Cepas_Stamatakis_2017_unrooted__node_labels.newick
tests/data/big_seed_plant_trees/: source.txt
treeview/: Cargo.toml  build.rs
treeview/_old/: _cnv_plot.rs  _cnv_tree.rs  _cnv_tree_1.rs  _cnv_tree_2.rs  _cnv_utils.rs  _lib.rs  _tree.rs  _treeview.rs  _update.rs  _utils.rs
treeview/src/: cnv_path.rs  cnv_path_builder.rs  cnv_plot.rs  cnv_tree.rs  cnv_utils.rs  config.rs  consts.rs  context_menu.rs  data_table.rs  edge_utils.rs  elements.rs  gts.rs  iced.rs  icons.rs  lib.rs  path_builders.rs  path_utils.rs  pdf.rs  rect_vals.rs  style.rs  svg.rs  tables.rs  treestate.rs  treeview.rs  treeview_config.rs  utils.rs  view.rs
treeview/src/cnv_plot/: draw.rs  state.rs
treeview/src/cnv_tree/: draw.rs  program.rs  state.rs
treeview/src/consts/: fill.rs  stroke.rs  text.rs
treeview/src/pdf/: draw.rs  object_conversion.rs  utils.rs
treeview/src/tables/: attributes.rs  nodes.rs
treeview/src/treeview/: cnv_plot.rs  cnv_tree.rs  pane_grid_main.rs  panes.rs  styles.rs  tree.rs  tree_state.rs  ui.rs  update.rs  view.rs
treeview/src/treeview/cnv_tree/: draw.rs  drawables.rs  program.rs  state.rs
treeview/src/treeview/ui/: style.rs  widget.rs  widget_settings.rs
treeview/src/view/: buttons.rs  pick_lists.rs  scrollables.rs  tables.rs  togglers.rs
utils/: Cargo.toml
utils/src/: colors.rs  lib.rs  math.rs  text_width.rs
widget/: Cargo.toml
widget/src/: lib.rs  widget.rs
widget/src/widget/: button.rs  toggler.rs
