[profile.dev] # ---------------------
    codegen-units=6       # 256
    debug=true            # true
    debug-assertions=true # true
    incremental=true      # true
    lto=false             # false
    opt-level=1           # 1
    overflow-checks=true  # true
    panic="abort"         # "unwind"
    rpath=false           # false
    strip=false           # false

    [profile.dev.package.objc2]
        debug-assertions=false

[profile.custom] # -----------------
    codegen-units=2
    debug=false
    debug-assertions=false
    incremental=false
    inherits="release"
    lto=false
    opt-level=2
    overflow-checks=true
    panic="abort"
    rpath=false
    strip=true

[profile.release] # -----------------
    codegen-units=1        # 16
    debug=false            # false
    debug-assertions=false # false
    incremental=false      # false
    lto=true               # false
    opt-level=3            # 3
    overflow-checks=true   # false
    panic="abort"          # "unwind"
    rpath=false            # false
    strip=true             # "none"

[workspace]
    members=["app", "riced", "treeview"]
    resolver="3"

    [workspace.package]
        authors=["Karolis Ramanauskas"]
        categories=[
            "gui",
            "science::bioinformatics",
            "science::bioinformatics::sequence-analysis",
            "visualization",
        ]
        description=""
        documentation=""
        edition="2024"
        exclude=[]
        homepage=""
        include=[]
        keywords=[]
        license=""
        license-file="LICENSE"
        publish=false
        readme="README.md"
        repository="https://github.com/karolisr/treehouse"
        version="0.0.0"

    [workspace.dependencies]
        num-traits="0.2.19"
        numfmt="1.1.1"
        objc2="0.6.1"
        objc2-app-kit="0.3.1"
        objc2-foundation="0.3.1"
        rayon="1.10.0"
        riced={path="riced", features=["crisp"]}
        roarsvg="0.5.0"
        tracing-subscriber="0.3.19"
        treeview={path="treeview"}

        [workspace.dependencies.dendros]
            branch="main"
            default-features=false
            features=[]
            git="https://github.com/karolisr/dendros.git"

        [workspace.dependencies.muda]
            branch="custom"
            default-features=false
            features=[]
            git="https://github.com/karolisr/muda.git"

        [workspace.dependencies.rfd]
            default-features=false
            features=[]
            version="0.15.3"

        [workspace.dependencies.tokio]
            default-features=false
            features=[
                "fs",              # tokio::fs types.
                "io-std",          # Stdout, Stdin and Stderr types.
                "io-util",         # the IO based Ext traits.
                "macros",          # #[tokio::main] and #[tokio::test] macros.
                "net",             # tokio::net types such as TcpStream, UnixStream and UdpSocket, as well as (on Unix-like systems) AsyncFd and (on FreeBSD) PollAio.
                "parking_lot",     # as a potential optimization, use the _parking_lot_ crate’s synchronization primitives internally. Also, this dependency is necessary to construct some of our primitives in a const context. MSRV may increase according to the _parking_lot_ release in use.
                "process",         # tokio::process types.
                "rt",              # tokio::spawn, the current-thread scheduler, and non-scheduler utilities.
                "rt-multi-thread", # the heavier, multi-threaded, work-stealing scheduler.
                "signal",          # all tokio::signal types.
                "sync",            # all tokio::sync types.
                "test-util",       # testing based infrastructure for the Tokio runtime.
                "time",            # tokio::time types and allows the schedulers to enable the built in timer.
            ]
            version="1.46.0"

    [workspace.lints.clippy]
        single_match="allow"

    [workspace.lints.rust]
