[workspace]
    members=["app", "riced", "treeview"]
    resolver="3"

    [workspace.package] # ------------------------------------------------------
        authors=["Karolis Ramanauskas"]
        categories=[
            "gui",
            "science::bioinformatics",
            "science::bioinformatics::sequence-analysis",
            "visualization",
        ]
        description=""
        documentation=""
        edition="2024"
        exclude=[]
        homepage=""
        include=[]
        keywords=[]
        license=""
        license-file="LICENSE"
        publish=false
        readme="README.md"
        repository="https://github.com/karolisr/treehouse"
        rust-version="1.88"
        version="0.5.0"

    [workspace.dependencies] # -------------------------------------------------
        num-traits="0.2.19"
        numfmt="1.2.0"
        objc2="0.6.1"
        objc2-app-kit="0.3.1"
        objc2-foundation="0.3.1"
        # oxidize-pdf="0.1.3"
        oxidize-pdf={git="https://github.com/bzsanti/oxidizePdf"}
        rayon="1.10.0"
        riced={path="riced", features=["crisp"]}
        treeview={path="treeview"}
        # ----------------------------------------------------------------------
        # tracing-subscriber="0.3.19"
        # ----------------------------------------------------------------------
        # roarsvg="0.5.0"
        # roarsvg={git="https://github.com/karolisr/roarsvg"}
        # usvg="0.36.0"
        # usvg={git="https://github.com/karolisr/resvg", branch="v36"}
        # usvg-tree="0.36.0"
        # usvg-tree={git="https://github.com/karolisr/resvg", branch="v36"}
        # ----------------------------------------------------------------------

        [workspace.dependencies.dendros]
            branch="main"
            default-features=false
            features=[]
            git="https://github.com/karolisr/dendros.git"

        [workspace.dependencies.muda]
            branch="custom"
            default-features=false
            features=[]
            git="https://github.com/karolisr/muda.git"

        [workspace.dependencies.rfd]
            default-features=false
            features=[]
            version="0.15.4"

        [workspace.dependencies.tokio]
            default-features=false
            features=[
                "fs",              # tokio::fs types.
                "io-std",          # Stdout, Stdin and Stderr types.
                "io-util",         # the IO based Ext traits.
                "macros",          # #[tokio::main] and #[tokio::test] macros.
                "net",             # tokio::net types such as TcpStream, UnixStream and UdpSocket, as well as (on Unix-like systems) AsyncFd and (on FreeBSD) PollAio.
                "parking_lot",     # as a potential optimization, use the _parking_lot_ crate’s synchronization primitives internally. Also, this dependency is necessary to construct some of our primitives in a const context. MSRV may increase according to the _parking_lot_ release in use.
                "process",         # tokio::process types.
                "rt",              # tokio::spawn, the current-thread scheduler, and non-scheduler utilities.
                "rt-multi-thread", # the heavier, multi-threaded, work-stealing scheduler.
                "signal",          # all tokio::signal types.
                "sync",            # all tokio::sync types.
                "test-util",       # testing based infrastructure for the Tokio runtime.
                "time",            # tokio::time types and allows the schedulers to enable the built in timer.
            ]
            version="1.46.1"

    [workspace.lints.rust] # ---------------------------------------------------
        missing_debug_implementations="deny"
        unused_results="deny"
        # missing_docs="warn"
        # unsafe_code="deny"

    [workspace.lints.clippy] # -------------------------------------------------
        collapsible_if="allow"
        default_trait_access="allow"
        filter_map_next="deny"
        from_over_into="deny"
        large-enum-variant="allow"
        manual_let_else="deny"
        map-entry="allow"
        match-wildcard-for-single-variants="deny"
        needless_borrow="deny"
        new_without_default="deny"
        redundant-closure-for-method-calls="deny"
        result_large_err="allow"
        semicolon_if_nothing_returned="deny"
        single_match="allow"
        trivially-copy-pass-by-ref="deny"
        type-complexity="allow"
        uninlined_format_args="allow"
        unused_async="deny"
        useless_conversion="deny"

    [workspace.lints.rustdoc] # ------------------------------------------------
        broken_intra_doc_links="forbid"

[profile.dev] # ----------------------------------------------------------------
    codegen-units=6       # 256
    debug=true            # true
    debug-assertions=true # true
    incremental=true      # true
    lto=false             # false
    opt-level=1           # 1
    overflow-checks=true  # true
    panic="abort"         # "unwind"
    rpath=false           # false
    strip=false           # false

    [profile.dev.package.objc2]
        debug-assertions=false

[profile.release] # ------------------------------------------------------------
    codegen-units=1        # 16
    debug=false            # false
    debug-assertions=false # false
    incremental=false      # false
    lto=true               # false
    opt-level=3            # 3
    overflow-checks=true   # false
    panic="abort"          # "unwind"
    rpath=false            # false
    strip=true             # "none"
