[workspace]
    members=["app", "riced", "treeview"]
    resolver="3"

    [workspace.package] # ------------------------------------------------------
        authors=["Karolis Ramanauskas"]
        categories=[
            "gui",
            "science::bioinformatics",
            "science::bioinformatics::sequence-analysis",
            "visualization",
        ]
        description=""
        documentation=""
        edition="2024"
        exclude=[]
        homepage=""
        include=[]
        keywords=[]
        license=""
        license-file="LICENSE"
        publish=false
        readme="README.md"
        repository="https://github.com/karolisr/treehouse"
        rust-version="1.88"
        version="0.26.0"

    [workspace.dependencies] # -------------------------------------------------
        num-traits="0.2.19"
        numfmt="1.2.0"
        objc2="0.6.3"
        objc2-app-kit="0.3.2"
        objc2-foundation="0.3.2"
        rayon="1.11.0"
        riced={path="riced", features=["crisp"]}
        thiserror="2.0.17"
        treeview={path="treeview"}
        windows="0.62.2"
        winreg="0.55.0"
        # ----------------------------------------------------------------------
        # tracing-subscriber="0.3.19"
        # ----------------------------------------------------------------------

        [workspace.dependencies.dendros]
            branch="main"
            default-features=false
            features=[]
            git="https://github.com/karolisr/dendros.git"

        [workspace.dependencies.muda]
            branch="custom"
            default-features=false
            features=[]
            git="https://github.com/karolisr/muda.git"

        [workspace.dependencies.rfd]
            default-features=false
            features=[]
            version="0.16.0"

        [workspace.dependencies.oxidize-pdf]
            default-features=false
            features=["compression", "performance", "rayon"]
            version="=1.6.3"
            # branch="custom"
            # git="https://github.com/karolisr/oxidizePdf"

        # [workspace.dependencies.tokio]
        #     default-features=false
        #     features=[
        #         "fs",              # tokio::fs types.
        #         "io-std",          # Stdout, Stdin and Stderr types.
        #         "io-util",         # the IO based Ext traits.
        #         "macros",          # #[tokio::main] and #[tokio::test] macros.
        #         "net",             # tokio::net types such as TcpStream, UnixStream and UdpSocket, as well as (on Unix-like systems) AsyncFd and (on FreeBSD) PollAio.
        #         "parking_lot",     # as a potential optimization, use the _parking_lot_ crate’s synchronization primitives internally. Also, this dependency is necessary to construct some of our primitives in a const context. MSRV may increase according to the _parking_lot_ release in use.
        #         "process",         # tokio::process types.
        #         "rt",              # tokio::spawn, the current-thread scheduler, and non-scheduler utilities.
        #         "rt-multi-thread", # the heavier, multi-threaded, work-stealing scheduler.
        #         "signal",          # all tokio::signal types.
        #         "sync",            # all tokio::sync types.
        #         "test-util",       # testing based infrastructure for the Tokio runtime.
        #         "time",            # tokio::time types and allows the schedulers to enable the built in timer.
        #     ]
        #     version="1.48.0"

    [workspace.lints.rust] # ---------------------------------------------------
        missing_debug_implementations="deny"
        unused_results="deny"
        # missing_docs="warn"
        # unsafe_code="deny"

    [workspace.lints.clippy] # -------------------------------------------------
        collapsible_if="allow"
        default_trait_access="allow"
        filter_map_next="deny"
        from_over_into="deny"
        large-enum-variant="allow"
        manual_let_else="deny"
        map-entry="allow"
        match-wildcard-for-single-variants="deny"
        needless_borrow="deny"
        new_without_default="deny"
        redundant-closure-for-method-calls="deny"
        result_large_err="allow"
        semicolon_if_nothing_returned="deny"
        single_match="allow"
        trivially-copy-pass-by-ref="deny"
        type-complexity="allow"
        uninlined_format_args="allow"
        unused_async="deny"
        useless_conversion="deny"

    [workspace.lints.rustdoc] # ------------------------------------------------
        broken_intra_doc_links="forbid"

[patch.crates-io]
    iced_core={git="https://github.com/karolisr/iced.git", branch="custom"}
    iced_widget={git="https://github.com/karolisr/iced.git", branch="custom"}

[profile.dev] # ----------------------------------------------------------------
    codegen-units=6       # 256
    debug=true            # true
    debug-assertions=true # true
    incremental=true      # true
    lto=false             # false
    opt-level=1           # 1
    overflow-checks=true  # true
    panic="abort"         # "unwind"
    rpath=false           # false
    strip=false           # false

    [profile.dev.package.objc2]
        debug-assertions=false

[profile.release] # ------------------------------------------------------------
    codegen-units=1        # 16
    debug=false            # false
    debug-assertions=false # false
    incremental=false      # false
    lto=true               # false
    opt-level=3            # 3
    overflow-checks=true   # false
    panic="abort"          # "unwind"
    rpath=false            # false
    strip=true             # "none"
