[package]
    authors.workspace=true
    categories.workspace=true
    default-run="treehouse"
    edition.workspace=true
    license-file.workspace=true
    name="treehouse"
    readme.workspace=true
    repository.workspace=true
    rust-version.workspace=true
    version.workspace=true

    # cargo-bundle (https://github.com/burtonageo/cargo-bundle) ----------------
    [package.metadata.bundle.bin.treehouse]
        category="public.app-category.utilities"
        copyright="Copyright \u00A9 Karolis Ramanauskas 2025\nAll rights reserved"
        deb_depends=[]
        icon=["resources/icons/treehouse*.icns"]
        identifier="is.karol.treehouse"
        # linux_exec_args=[]
        linux_mime_types=[]
        linux_use_terminal=false
        long_description="""View and edit gene trees and phylogenies."""
        name="TreeHouse"
        osx_frameworks=[]
        osx_url_schemes=["is.karol.treehouse"]
        short_description="View and edit gene trees and phylogenies."
        # --------------------------------------------------------------------------

[dependencies]
    dendros={workspace=true}
    riced={workspace=true}
    treeview={workspace=true}

[target.'cfg(target_os = "linux")'.dependencies]
    rfd={workspace=true, features=["gtk3"]}

[target.'cfg(target_os = "macos")'.dependencies]
    muda={workspace=true}
    objc2={workspace=true}
    objc2-app-kit={workspace=true}
    objc2-foundation={workspace=true}
    rfd={workspace=true}

[target.'cfg(target_os = "windows")'.dependencies]
    muda={workspace=true}
    rfd={workspace=true}

[lints]
    workspace=true
