[package]
    authors.workspace=true
    categories.workspace=true
    default-run="treehouse"
    edition.workspace=true
    license-file.workspace=true
    name="treehouse"
    readme.workspace=true
    repository.workspace=true
    rust-version.workspace=true
    version.workspace=true

    # cargo-bundle (https://github.com/burtonageo/cargo-bundle) ----------------
    [package.metadata.bundle.bin.treehouse]
        category="public.app-category.utilities"
        copyright="Copyright \u00A9 Karolis Ramanauskas 2025\nAll rights reserved"
        deb_depends=[]
        icon=["resources/icons/treehouse*.icns"]
        identifier="is.karol.treehouse"
        # linux_exec_args=[]
        linux_mime_types=["newick", "tre"]
        linux_use_terminal=false
        long_description="""View and edit gene trees and phylogenies."""
        name="TreeHouse"
        osx_frameworks=[]
        osx_url_schemes=["is.karol.treehouse"]
        short_description="View and edit gene trees and phylogenies."
        # --------------------------------------------------------------------------

[features]
    default=[
        "menu-custom",
        # "menu-muda"
    ]
    menu-custom=["dep:iced_aw"]
    menu-muda=["dep:muda"]

[dependencies.iced_aw]
    branch="custom"
    default-features=false
    features=["context_menu", "menu"]
    git="https://github.com/karolisr/iced_aw.git"
    optional=true

[dependencies]
    dendros={workspace=true}
    riced={workspace=true}
    thiserror={workspace=true}
    treeview={workspace=true}
    # tracing-subscriber={workspace=true}

[target.'cfg(target_os = "linux")'.dependencies]
    rfd={workspace=true, features=["gtk3"]}

[target.'cfg(target_os = "macos")'.dependencies]
    muda={workspace=true, optional=true}
    objc2={workspace=true}
    objc2-app-kit={workspace=true}
    objc2-foundation={workspace=true}
    rfd={workspace=true}

[target.'cfg(target_os = "windows")'.dependencies]
    muda={workspace=true, optional=true}
    rfd={workspace=true}
    windows={workspace=true, features=[
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Registry",
        "Win32_UI_Shell",
    ]}
    winreg={workspace=true}

[target.'cfg(target_os = "windows")'.build-dependencies]
    ico="0.4"
    image="0.25"
    winres="0.1"

[lints]
    workspace=true
