[package]
name = "riced"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[build-dependencies]
convert_case = "0.8.0"

[dependencies]
iced = { workspace = true, features = [
    "advanced",
    "canvas",
    "crisp",
    "lazy",
    "sipper",
    "svg",
    "thread-pool",
    "wgpu",
] }
numfmt = { workspace = true }
num-traits = { workspace = true }
