[package]
    authors.workspace=true
    categories.workspace=true
    edition.workspace=true
    license-file.workspace=true
    name="treeview"
    readme.workspace=true
    repository.workspace=true
    rust-version.workspace=true
    version.workspace=true

[dependencies]
    dendros={workspace=true}
    rayon={workspace=true}
    riced={workspace=true}
    roarsvg="0.5.0"
    usvg-tree="0.36.0"

[lints]
    workspace=true
