[package]
    authors.workspace=true
    categories.workspace=true
    edition.workspace=true
    license-file.workspace=true
    name="treeview"
    readme.workspace=true
    repository.workspace=true
    rust-version.workspace=true
    version.workspace=true

[dependencies]
    dendros={workspace=true}
    rayon={workspace=true}
    riced={workspace=true}
    # roarsvg="0.5.0"
    roarsvg={git="https://github.com/karolisr/roarsvg"}
    # usvg-tree="0.36.0"
    usvg={git="https://github.com/karolisr/resvg", branch="v36"}
    usvg-tree={git="https://github.com/karolisr/resvg", branch="v36"}

[lints]
    workspace=true
