[package]
    authors.workspace=true
    categories.workspace=true
    edition.workspace=true
    license-file.workspace=true
    name="treeview"
    readme.workspace=true
    repository.workspace=true
    rust-version.workspace=true
    version.workspace=true

[build-dependencies]
    csv={workspace=true}
    riced={workspace=true}
    serde={workspace=true, features=["derive"]}
    serde_json={workspace=true}

[dependencies]
    dendros={workspace=true}
    oxidize-pdf={workspace=true}
    rayon={workspace=true}
    riced={workspace=true}

[lints]
    workspace=true
