[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
iced = { workspace = true, features = ["advanced"] }
